# rails_db_mcp_server

./: .gitignore  LICENSE  README.md  assist_me  pyproject.toml  sitecustomize.py
config/: mcp_config.example.yml
scripts/: assistant.py  print_schema.py
src/rails_mcp_server/: __init__.py  config_loader.py  data_masker.py  query_builder.py  query_executor.py  query_validator.py  rate_limiter.py  schema_parser.py  server.py
tests/: __init__.py  test_cli_stub.py  test_config_loader.py  test_data_masker.py  test_integration.py  test_query_builder.py  test_query_validator.py  test_rate_limiter.py  test_schema_parser.py  test_search_schema.py
tests/fixtures/: mcp_config.yml  schema_rails_5.rb  schema_rails_7.rb
