[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rails-mcp-server"
version = "0.1.0"
description = "Generic MCP server for safely querying Rails databases."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MCP Team" }
]
license = { text = "MIT" }
dependencies = [
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pyyaml>=6.0",
  "pydantic>=2.7",
  "click>=8.1",
  "typing-extensions>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "faker>=25.0",
]

[project.scripts]
rails-mcp-server = "rails_mcp_server.server:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
  "tests"
]
